--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "^1.15.2",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
@@ -25,12 +26,15 @@
     "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.4",
     "method-override": "^2.3.10",
+    "mocha": "^5.0.0",
     "moment": "^2.20.1",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
     "request": "^2.83.0",
+    "should": "^13.2.1",
+    "supertest": "^3.0.0",
     "uuid": "^3.2.1",
     "winston": "^2.4.0"
   },
